--- a/github/index.html
+++ b/github/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Site no github</title>
+    <title>Meu Primeiro Site Publicado</title>
+    <h1> Meu primeiro site no GitHub Pages </h1>
 </head>
-<h1><mark> Você sabia que o Diamante Vermelho é a "coisa mais cara do mundo?" </mark></h1>
+   
+<h2><mark> Você sabia que o Diamante Vermelho é a "coisa mais cara do mundo?" </mark></h2>
 <body>
    <h2>
        <strong><i>Diamante Vermelho </i> </strong></h2>
