--- a/github/index.html
+++ b/github/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Site no github</title>
+    <title>Meu Primeiro site publicado</title>
 </head>
-<h1><mark> Você sabia que o Diamante Vermelho é a "coisa mais cara do mundo?" </mark></h1>
+<h1> Meu primeiro site no GitHub Pages </h1>
+    <br> 
+<h2><mark> Você sabia que o Diamante Vermelho é a "coisa mais cara do mundo?" </mark></h2>
 <body>
-   <h2>
-       <strong><i>Diamante Vermelho </i> </strong></h2>
+   <h3>
+       <strong><i>Diamante Vermelho </i> </strong></h3>
         <p>
             <strong>Com base em tudo isso, a coisa mais cara do mundo é o raríssimo diamante vermelho. Um quilo dessa pedra preciosa chega a custar 15 bilhões de reais! Junto com outros 19 produtos, ela lidera a lista de coisas exorbitantes, divididas em seis categorias.</strong>
         </p>
@@ -23,10 +25,10 @@
                         font-size: 24px;
                         margin: 50px 50px 50px 50px;
                     }
-                    h1{
+                    h2{
                         font-size: 40px;
                     }
-                    h2{
+                    h3{
                         text-align: left;    
                         font-size: 50px;            
                     }
